Game/AWS/template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Simple Stack to launch e16-3yp-full-body-motion-tracking-system Infrastructure",
    "Parameters": {
        "VpcCidrPrefix": {
            "Type": "String",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})",
            "Description": "Local subnets prefix like 172.16"
        },
        "KeyName": {
            "Type": "String",
            "Description": "SSH key-pair name in the aws to use in make ssh connection"
        }
    },
    "Resources": {
        "Vpc": {
            "Type": "AWS::EC2::VPC",
            "Metadata": {
                "Comments": "Create VPC"
            },
            "Properties": {
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "VpcCidrPrefix"
                            },
                            ".0.0/16"
                        ]
                    ]
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicRouteToInternet": {
            "DependsOn": "InternetGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Metadata": {
                "Comments": "Route to internet"
            },
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-public-route-table"
                        }
                    }
                ]
            }
        },
        "PublicRouteTableAssociationA": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }
            }
        },
        "PublicRouteTableAssociationB": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnetB"
                }
            }
        },
        "PublicRouteTableAssociationC": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnetC"
                }
            }
        },
        "SecurityGrouptoallowsshtraffic": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "prod-sg1",
                "GroupDescription": "Security Group for prod environment",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "To allow ssh traffic from anywhere"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "SecurityGrouptoAuth": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "prod-sg2",
                "GroupDescription": "Security Group for Auth Server environment",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1911,
                        "ToPort": 1911,
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "VpcCidrPrefix"
                                    },
                                    ".2.0/24"
                                ]
                            ]
                        },
                        "Description": "To allow connection from gateway server"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1912,
                        "ToPort": 1912,
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "VpcCidrPrefix"
                                    },
                                    ".3.0/24"
                                ]
                            ]
                        },
                        "Description": "To allow connection from game server"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "SecurityGrouptoGateway": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "prod-sg3",
                "GroupDescription": "Security Group for Gateway environment",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1911,
                        "ToPort": 1911,
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "VpcCidrPrefix"
                                    },
                                    ".1.0/24"
                                ]
                            ]
                        },
                        "Description": "To allow connection from auth server server"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1910,
                        "ToPort": 1910,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "To allow connection from clients"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "SecurityGrouptoGame": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "prod-sg4",
                "GroupDescription": "Security Group for Game environment",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1912,
                        "ToPort": 1912,
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "VpcCidrPrefix"
                                    },
                                    ".1.0/24"
                                ]
                            ]
                        },
                        "Description": "To allow connection from auth server server"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1909,
                        "ToPort": 1909,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "To allow connection from clients"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "PublicSubnetA": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "VpcCidrPrefix"
                            },
                            ".1.0/24"
                        ]
                    ]
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-subnet-a"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "PublicSubnetB": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "VpcCidrPrefix"
                            },
                            ".2.0/24"
                        ]
                    ]
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-subne-tb"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "PublicSubnetC": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "VpcCidrPrefix"
                            },
                            ".3.0/24"
                        ]
                    ]
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-subnet-c"
                    }
                ],
                "VpcId": {
                    "Ref": "Vpc"
                }
            }
        },
        "EC2AuthServer": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "configSets": {
                        "default": [
                            "Download",
                            "Install",
                            "Execute"
                        ],
                        "Run": [
                            "Install"
                        ]
                    },
                    "Download": {
                        "packages": {
                            "yum": {
                                "git": []
                            }
                        },
                        "commands": {
                            "Install": {
                                "command": "git clone https://github.com/cepdnaclk/e16-3yp-full-body-motion-tracking-system.git",
                                "cwd": "/home/ec2-user"
                            },
                            "Permission": {
                                "command": "sudo chmod +x run.sh && chmod +x runAuthServer.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files"
                            }
                        }
                    },
                    "Install": {
                        "commands": {
                            "Install": {
                                "command": "sudo ./run.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        },
                        "files": {
                            "/etc/systemd/system/rot13.service": {
                                "content": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "[Unit]",
                                            "\n",
                                            "Description=Auth server starting service",
                                            "\n",
                                            "After=network.target",
                                            "\n",
                                            "[Service]",
                                            "\n",
                                            "Type=simple",
                                            "\n",
                                            "StartLimitInterval=5",
                                            "\n",
                                            "Restart=on-failure",
                                            "\n",
                                            "RestartSec=1",
                                            "\n",
                                            "User=root",
                                            "\n",
                                            "WorkingDirectory=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/",
                                            "\n",
                                            "ExecStart=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/runAuthServer.sh",
                                            "\n",
                                            "[Install]",
                                            "\n",
                                            "WantedBy=multi-user.target",
                                            "\n"
                                        ]
                                    ]
                                },
                                "mode": "000644",
                                "owner": "root",
                                "group": "root"
                            }
                        }
                    },
                    "Execute": {
                        "commands": {
                            "Execute": {
                                "command": "sudo systemctl start rot13 && systemctl enable rot13",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "ImageId": "ami-0915bcb5fa77e4892",
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "NetworkInterfaces": [
                    {
                        "Description": "Primary network interface",
                        "DeviceIndex": "0",
                        "SubnetId": {
                            "Ref": "PublicSubnetA"
                        },
                        "GroupSet": [
                            {
                                "Ref": "SecurityGrouptoallowsshtraffic"
                            },
                            {
                                "Ref": "SecurityGrouptoAuth"
                            }
                        ]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe\n",
                                "sudo yum install -y aws-cfn-bootstrap \n",
                                "#Install the files and packages from the metadata\n",
                                "sudo /opt/aws/bin/cfn-init ",
                                " --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                " --resource  EC2AuthServer",
                                " -c default ",
                                " \n",
                                "# Signal the status from cfn-init\n",
                                "sudo /opt/aws/bin/cfn-signal -e $? ",
                                "         --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                "         --resource EC2AuthServer ",
                                "\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-ec2-auth-server"
                        }
                    }
                ]
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Timeout": "PT9M"
                }
            }
        },
        "EC2GatewayServer": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "configSets": {
                        "default": [
                            "Download",
                            "Install",
                            "Execute"
                        ],
                        "Run": [
                            "Install"
                        ]
                    },
                    "Download": {
                        "packages": {
                            "yum": {
                                "git": []
                            }
                        },
                        "commands": {
                            "Install": {
                                "command": "git clone https://github.com/cepdnaclk/e16-3yp-full-body-motion-tracking-system.git",
                                "cwd": "/home/ec2-user"
                            },
                            "Permission": {
                                "command": "sudo chmod +x run.sh && chmod +x runGatewayServer.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files"
                            }
                        }
                    },
                    "Install": {
                        "commands": {
                            "Install": {
                                "command": "sudo ./run.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        },
                        "files": {
                            "/etc/systemd/system/rot13.service": {
                                "content": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "[Unit]",
                                            "\n",
                                            "Description=Gateway server starting service",
                                            "\n",
                                            "After=network.target",
                                            "\n",
                                            "[Service]",
                                            "\n",
                                            "Type=simple",
                                            "\n",
                                            "StartLimitInterval=5",
                                            "\n",
                                            "Restart=on-failure",
                                            "\n",
                                            "RestartSec=1",
                                            "\n",
                                            "User=root",
                                            "\n",
                                            "WorkingDirectory=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/",
                                            "\n",
                                            "ExecStart=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/runGatewayServer.sh ",
                                            {
                                                "Fn::GetAtt": [
                                                    "EC2AuthServer",
                                                    "PrivateIp"
                                                ]
                                            },
                                            "\n",
                                            "[Install]",
                                            "\n",
                                            "WantedBy=multi-user.target",
                                            "\n"
                                        ]
                                    ]
                                },
                                "mode": "000644",
                                "owner": "root",
                                "group": "root"
                            }
                        }
                    },
                    "Execute": {
                        "commands": {
                            "Execute": {
                                "command": "sudo systemctl start rot13 && systemctl enable rot13",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "ImageId": "ami-0915bcb5fa77e4892",
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "NetworkInterfaces": [
                    {
                        "Description": "Primary network interface",
                        "DeviceIndex": "0",
                        "SubnetId": {
                            "Ref": "PublicSubnetB"
                        },
                        "GroupSet": [
                            {
                                "Ref": "SecurityGrouptoallowsshtraffic"
                            },
                            {
                                "Ref": "SecurityGrouptoGateway"
                            }
                        ]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe\n",
                                "sudo yum install -y aws-cfn-bootstrap \n",
                                "#Install the files and packages from the metadata\n",
                                "sudo /opt/aws/bin/cfn-init ",
                                " --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                " --resource  EC2GatewayServer",
                                " -c default ",
                                " \n",
                                "# Signal the status from cfn-init\n",
                                "sudo /opt/aws/bin/cfn-signal -e $? ",
                                "         --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                "         --resource EC2GatewayServer ",
                                "\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-gateway-server"
                        }
                    }
                ]
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Timeout": "PT9M"
                }
            }
        },
        "EC2GameServer": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "configSets": {
                        "default": [
                            "Download",
                            "Install",
                            "Execute"
                        ],
                        "Run": [
                            "Install"
                        ]
                    },
                    "Download": {
                        "packages": {
                            "yum": {
                                "git": []
                            }
                        },
                        "commands": {
                            "Install": {
                                "command": "git clone https://github.com/cepdnaclk/e16-3yp-full-body-motion-tracking-system.git",
                                "cwd": "/home/ec2-user"
                            },
                            "Permission": {
                                "command": "sudo chmod +x  run.sh && chmod +x runServer.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files"
                            }
                        }
                    },
                    "Install": {
                        "commands": {
                            "Install": {
                                "command": "sudo ./run.sh",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        },
                        "files": {
                            "/etc/systemd/system/rot13.service": {
                                "content": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "[Unit]",
                                            "\n",
                                            "Description=Gateway server starting service",
                                            "\n",
                                            "After=network.target",
                                            "\n",
                                            "[Service]",
                                            "\n",
                                            "Type=simple",
                                            "\n",
                                            "StartLimitInterval=5",
                                            "\n",
                                            "Restart=on-failure",
                                            "\n",
                                            "RestartSec=1",
                                            "\n",
                                            "User=root",
                                            "\n",
                                            "WorkingDirectory=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/",
                                            "\n",
                                            "ExecStart=/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/runServer.sh ",
                                            {
                                                "Fn::GetAtt": [
                                                    "EC2AuthServer",
                                                    "PrivateIp"
                                                ]
                                            },
                                            "\n",
                                            "[Install]",
                                            "\n",
                                            "WantedBy=multi-user.target",
                                            "\n"
                                        ]
                                    ]
                                },
                                "mode": "000644",
                                "owner": "root",
                                "group": "root"
                            }
                        }
                    },
                    "Execute": {
                        "commands": {
                            "Execute": {
                                "command": "sudo systemctl start rot13 && systemctl enable rot13",
                                "cwd": "/home/ec2-user/e16-3yp-full-body-motion-tracking-system/Game/PCK_Files/"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "ImageId": "ami-0915bcb5fa77e4892",
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "NetworkInterfaces": [
                    {
                        "Description": "Primary network interface",
                        "DeviceIndex": "0",
                        "SubnetId": {
                            "Ref": "PublicSubnetC"
                        },
                        "GroupSet": [
                            {
                                "Ref": "SecurityGrouptoallowsshtraffic"
                            },
                            {
                                "Ref": "SecurityGrouptoGame"
                            }
                        ]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe\n",
                                "sudo yum install -y aws-cfn-bootstrap \n",
                                "#Install the files and packages from the metadata\n",
                                "sudo /opt/aws/bin/cfn-init ",
                                " --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                " --resource  EC2GameServer",
                                " -c default ",
                                " \n",
                                "# Signal the status from cfn-init\n",
                                "sudo /opt/aws/bin/cfn-signal -e $? ",
                                "         --stack ",
                                {
                                    "Ref": "AWS::StackName"
                                },
                                "         --resource EC2GameServer ",
                                "\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-game-server"
                        }
                    }
                ]
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Timeout": "PT9M"
                }
            }
        }
    },
    "Outputs": {
        "VpcId": {
            "Description": "VPC ID",
            "Value": {
                "Ref": "Vpc"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VpcId"
                }
            }
        },
        "VpcCidr": {
            "Description": "VPC CIDR",
            "Value": {
                "Fn::GetAtt": [
                    "Vpc",
                    "CidrBlock"
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VpcCidr"
                }
            }
        },
        "PublicSubnetA": {
            "Description": "Public A Subnet ID",
            "Value": {
                "Ref": "PublicSubnetA"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-PublicsubnetA"
                }
            }
        },
        "GatewayServerIp": {
            "Description": "Gateway Server IP",
            "Value": {
                "Fn::GetAtt": [
                    "EC2GatewayServer",
                    "PublicIp"
                ]
            },
            "Export": {
                "Name": "gateway-server-ip"
            }
        },
        "GameServerIp": {
            "Description": "Game Server IP",
            "Value": {
                "Fn::GetAtt": [
                    "EC2GameServer",
                    "PublicIp"
                ]
            },
            "Export": {
                "Name": "game-server-ip"
            }
        }
    }
}
